# argument-analysis-research

./: .bazelproject  .bazelrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  apiary.apib  dependencies.yaml  go.mod  go.sum  repositories.bzl
cmd/api/: BUILD.bazel  service.go
cmd/cli/: BUILD.bazel  segmenter.go
cmd/keyword/: BUILD.bazel  service.go
cmd/linker/: BUILD.bazel  service.go
cmd/segmenter/: BUILD.bazel  segmenter.go  service.go
config/: BUILD.bazel  adw.properties  jlt.properties
defaults/k8s/: BUILD.bazel  deploy-adw.yaml  deploy-linker.yaml  deploy-nonpreempt.yaml  deploy.yaml  ingress.yaml  pv-adw-config.yaml  pv-adw-resources.yaml  pv-adw.yaml  pv-linker.yaml  pvc-adw-config.yaml  pvc-adw-resources.yaml  pvc-adw.yaml  pvc-linker.yaml  service-adw.yaml  service.yaml
helpers/: docker.bzl  k8s.bzl  make_version  status.sh
k8s/: BUILD.bazel  deploy-adw.yaml  deploy-linker.yaml  deploy-nonpreempt.yaml  deploy.yaml  ingress.yaml  pv-adw.yaml  pvc-adw.yaml  pvc-linker.yaml  service.yaml
lib/: BUILD.bazel
pkg/api/: BUILD.bazel  error.go  server.go
pkg/api/middlewares/: BUILD.bazel  dev.go  status.go
pkg/document/: BUILD.bazel  document.go
pkg/keyword/: BUILD.bazel  extractor.go
pkg/linker/: BUILD.bazel  errors.go  linker.go  links.go  pool.go  rater.go
pkg/linker/api/: BUILD.bazel  insert.go  linkers.go  links.go
pkg/linker/async/: BUILD.bazel  db.go  documents.go  linker.go  metrics.go  rater.go  segments.go
pkg/linker/db/: BUILD.bazel  db.go
pkg/linker/storage/: BUILD.bazel  local.go  localManager.go
pkg/rater/: BUILD.bazel  rater.go
pkg/segmenter/: BUILD.bazel  segmenter.go
pkg/service/: BUILD.bazel  init.go
resources/: BUILD.bazel
src/: BUILD
src/main/kotlin/com/github/cdl/adw/: Service.kt
