load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle", "container_push")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")
load(
    ":helpers/docker.bzl",
    docker_tags = "docker_tags",
    tags = "tags",
)

gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "github.com/canonical-debate-lab/argument-analysis-research",
)

package(default_visibility = ["//visibility:public"])

exports_files([
    "resources.tar",
])

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "k8s_dev",
    objects = [
        "//k8s:dev_ingress",
        "//k8s:dev_pvc-adw",
        "//k8s:dev_pv-adw",
        "//k8s:dev_pvc-linker",
        "//cmd/segmenter:dev",
        "//cmd/keyword:dev",
        "//cmd/linker:dev",
        "//src:dev",
    ],
)
