package(default_visibility = ["//visibility:public"])

exports_files([
    "deploy.yaml",
    "deploy-nonpreempt.yaml",
    "deploy-linker.yaml",
    "deploy-adw.yaml",
    "service.yaml",
    "service-adw.yaml",
    "pv-adw.yaml",
    "pvc-adw.yaml",
    "pvc-linker.yaml",
])

load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load(
    "//:helpers/k8s.bzl",
    manifest = "template_manifest",
)

manifest(
    name = "manifest_ingress",
    template = "ingress.yaml",
)

k8s_deploy(
    name = "dev_ingress",
    template = ":manifest_ingress",
)

manifest(
    name = "manifest_pvc-adw",
    template = "pvc-adw.yaml",
)

manifest(
    name = "manifest_pvc-linker",
    template = "pvc-linker.yaml",
)

manifest(
    name = "manifest_pv-adw",
    template = "pv-adw.yaml",
)

k8s_deploy(
    name = "dev_pvc-adw",
    template = ":manifest_pvc-adw",
)

k8s_deploy(
    name = "dev_pv-adw",
    template = ":manifest_pv-adw",
)

k8s_deploy(
    name = "dev_pvc-linker",
    template = ":manifest_pvc-linker",
)
