load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["segmenter.go"],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/segmenter",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/document:go_default_library",
        "@com_github_seibert_media_golibs//log:go_default_library",
        "@in_gopkg_jdkato_prose_v2//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
