load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["init.go"],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/service",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_kelseyhightower_envconfig//:go_default_library",
        "@com_github_seibert_media_golibs//log:go_default_library",
        "@io_opencensus_go//stats/view:go_default_library",
        "@io_opencensus_go//trace:go_default_library",
        "@io_opencensus_go_contrib_exporter_prometheus//:go_default_library",
        "@io_opencensus_go_contrib_exporter_stackdriver//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
