load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "dev.go",
        "logging.go",
        "status.go",
    ],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/api/middlewares",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_seibert_media_golibs//log:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
