load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "insert.go",
        "linkers.go",
        "links.go",
    ],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/linker/api",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/document:go_default_library",
        "//pkg/linker:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_seibert_media_golibs//log:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
