load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "documents.go",
        "linker.go",
        "metrics.go",
        "rater.go",
        "segments.go",
    ],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/linker/async",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/document:go_default_library",
        "//pkg/linker:go_default_library",
        "//pkg/rater:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_seibert_media_golibs//log:go_default_library",
        "@io_opencensus_go//stats:go_default_library",
        "@io_opencensus_go//stats/view:go_default_library",
        "@io_opencensus_go//tag:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
