load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "local.go",
        "localManager.go",
    ],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/linker/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/document:go_default_library",
        "//pkg/linker:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_seibert_media_golibs//log:go_default_library",
        "@in_gopkg_djherbis_stow_v3//:go_default_library",
        "@io_etcd_go_bbolt//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
